# thermal_watchdog

./: Cargo.toml  README.md  dashboard.json
src/: control.rs  ipmi.rs  main.rs  metrics.rs  pid.rs
