[package]
name = "thermal_watchdog"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.6"
systemd = "0.4.0"
env_logger = "0.6.0"
clap = "2.32.0"
hyper = "0.12.23"
futures = "*"
toml = "0.4.10"
serde_derive = "*"
serde = "*"
tokio = "*"

[dependencies.ctrlc]
version = "3.1.1"
features = ["termination"]

[dependencies.socket2]
version = "0.3.8"
features = ["unix"]
